[IMP] socket.io to sync data

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -22,7 +22,7 @@ header#banner.hero-unit
   form.thing-form
     label Syncs in realtime across clients
     p.input-group
-      input.form-control(type='text', placeholder='AAPL | GOOG | ...', ng-model='stockCode')
+      input.form-control(type='text', placeholder='AAPL | GOOG | MSFT | ...', ng-model='stockCode')
       span.input-group-btn
         button.btn.btn-primary(type='submit', ng-click='addStock()') Add Stock
 
