--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -20,6 +20,7 @@
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     background: #4393B9;
+    //background-image: url("https://www.flickr.com/photos/125992663@N02/14600957805");
 }
 
 .footer {
