--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -4,7 +4,7 @@ header#banner.hero-unit
   .container
     h1 STOCK Price Chart
     p.lead Showing stock closed price chart since 2015-JAN-01
-    img(src='assets/images/yeoman.png', alt='I\'m Yeoman')
+    //img(src='assets/images/yeoman.png', alt='I\'m Yeoman')
 
 //area to show chart using plotly.js
 .container#stock-chart
@@ -12,7 +12,7 @@ header#banner.hero-unit
 .container
   .row
     .col-lg-12
-      h1.page-header Stocks to show:
+      h1.page-header Stocks:
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='stock in stocks')
         li
           a(href='#', tooltip='{{stock.code}}')
@@ -24,6 +24,7 @@ header#banner.hero-unit
     p.input-group
       input.form-control(type='text', placeholder='AAPL | GOOG | MSFT | ...', ng-model='stockCode')
       span.input-group-btn
+        //TODO: spin until done
         button.btn.btn-primary(type='submit', ng-click='addStock()') Add Stock
 
 footer.footer
@@ -31,6 +32,6 @@ footer.footer
     p
       | Angular Fullstack v2.1.1
       = ' | '
-      a(href='https://twitter.com/tyhenkel') @tyhenkel
+      a(href='https://twitter.com/thanhacun') @thanhacun
       = ' | '
-      a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
+      a(href='https://github.com/thanhacun/stock/issues?state=open') Issues
